Issue #18488: _pysqlite_final_callback() should not clear the exception set by the last call to the step() method of a user function